package Inscryption.Affichage;

public class GestionnairePartie {
}
