package Inscryption.Affichage;

public class InterfaceConsole {
}
