package Inscryption.Logique;

public class CarteAnimalLogic {
}
