package Inscryption.Logique;

public class ContactMortel {
}
