package Inscryption.Logique;

public class Coureur {
}
