package Inscryption.Logique;

public class Croissance {
}
