package Inscryption.Logique;

public class Emplacement {
}
