package Inscryption.Logique;

public class FabriqueCartes {
}
