package Inscryption.Logique;

public class JoueurLogic {
}
