package Inscryption.Logique;

public class NombreusesVies {
}
