package Inscryption.Logique;

public class PlateauLogic {
}
