package Inscryption.Logique;

public class Pouvoir {
}
