package Inscryption.Logique;

public class Puant {
}
