package Inscryption.Logique;

public class ScoreLogic {
}
